--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -2,10 +2,11 @@ book_filename: "Course_Name"
 chapter_name: "Chapter "
 repo: https://github.com/jhudsl/OTTR_Template/
 rmd_files: ["index.Rmd",
-            "01-intro.Rmd",
-            "02-chapter_of_course.Rmd",
-            "About.Rmd",
-            "References.Rmd"]
+            "01-overview.Rmd",
+            "03-lesson-plan.Rmd",
+            "B-help.Rmd",
+            "C-feedback.Rmd",
+            "About.Rmd"]
 new_session: yes
 bibliography: [book.bib]
 delete_merged_file: true
