Update to use new docker image

--- a/.github/workflows/custom-workflow.yml
+++ b/.github/workflows/custom-workflow.yml
@@ -7,6 +7,12 @@ on:
       render-type:
         required: true
         type: string
+      repository:
+        type: string
+        required: true
+    secrets:
+      gh_pat:
+        required: true
 
 jobs:
   gather-anvil-repos:
@@ -20,6 +26,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          token: ${{ secrets.gh_pat }}
 
       - name: Configure git
         run: |
@@ -36,10 +43,17 @@ jobs:
           git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }} --allow-unrelated-histories
         shell: bash
 
+      - name: Checkout if main
+        if: ${{ inputs.render-type == 'main' }}
+        run: |
+          git fetch --all
+          git checkout main
+        shell: bash
+
       - name: Run AnVIL repo check
         id: anvil_repos
         env:
-          GH_PAT: ${{ secrets.GITHUB_TOKEN }}
+          GH_PAT: ${{ secrets.gh_pat }}
         run: |
           sudo apt-get install libcurl4-openssl-dev
 
@@ -52,13 +66,16 @@ jobs:
           name: anvil-repo-results
           path: resources/AnVIL_repos.tsv
 
+      # Commit the rendered bookdown files
       - name: Commit AnVIL Repos file to main
         if: ${{ inputs.render-type == 'main' }}
+        env:
+          GH_PAT: ${{ secrets.gh_pat }}
         run: |
-          git add --force resources/AnVIL_repos.tsv || echo "No changes to commit"
-          git commit -m 'Add AnVIL repos file' || echo "No changes to commit"
-          git fetch --all
-          git push --force origin main || echo "No changes to commit"
+          git add --force resources/AnVIL_repos.tsv
+          git commit -m 'add AnVIL repos' || echo "No changes to commit"
+          git pull --allow-unrelated-histories --strategy-option=ours
+          git push -u origin main || echo "No changes to push"
 
       - name: Commit AnVIL Repos file to preview
         if: ${{ inputs.render-type == 'preview' }}
