--- a/config_automation.yml
+++ b/config_automation.yml
@@ -3,7 +3,7 @@
 # Check quiz formatting
 check-quizzes: no
 # Check that urls in the content are not broken
-url-checker: yes
+url-checker: no
 # Render preview of content with changes (Rmd's and md's are checked)
 render-preview: yes
 # Spell check Rmds and quizzes
@@ -21,4 +21,4 @@ render-coursera: no
 
 # What docker image should be used for rendering?
 # The default is jhudsl/course_template:main
-rendering-docker-image: 'jhudsl/course_template:main'
+rendering-docker-image: 'jhudsl/stats-for-genomics:0.9'
