--- a/config_automation.yml
+++ b/config_automation.yml
@@ -21,4 +21,4 @@ render-coursera: no
 
 # What docker image should be used for rendering?
 # The default is jhudsl/course_template:main
-rendering-docker-image: 'jhudsl/stats-for-genomics:0.9'
+rendering-docker-image: 'jhudsl/stats-for-genomics:main'
